--- a/public/crx/vera/style/camera.css
+++ b/public/crx/vera/style/camera.css
@@ -1,20 +1,17 @@
 .camera {
-  border-radius: 8px;
+  overflow: hidden;
   position: relative;
   width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5px;
-  border: 1px dashed #5c46e3;
-  background: none;
+  border-radius: var(--border-radius);
+  border: none;
+  background: var(--camera-bg-color);
 }
-.camera.local {
-  border-style: solid;
-}
-.camera:not(:last-child) {
-  margin-bottom: 10px;
+.camera:hover .video .opts {
+  visibility: visible;
 }
 .camera[bg-rm-status='processing'] canvas {
   display: none;
@@ -41,28 +38,37 @@
   transform: translate3d(-50%, -70%, 0);
   padding: 10px;
   border-radius: 5px;
-  background-color: #5c46e3;
+  background-color: var(--camera-bg-color);
   font-size: 22px;
-  color: #fff;
+  color: var(--font-color);
 }
 .camera .video {
   position: relative;
+  display: flex;
+}
+.camera .video .username {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 8px 10px;
+  border-radius: var(--border-radius);
+  background-color: var(--button-bg-color);
 }
 .camera .video .opts {
   z-index: 7;
   display: none;
   position: absolute;
-  right: 5px;
-  top: 5px;
+  bottom: 5px;
+  left: 5px;
   padding: 5px;
   display: flex;
+  visibility: hidden;
 }
 .camera .video .opts .opt {
   padding: 0;
-  opacity: 0.6;
-  border: 1px solid #5c46e3;
-  border-radius: 4px;
-  background-color: #5c46e3;
+  border: none;
+  border-radius: var(--border-radius);
+  background-color: var(--button-bg-color);
   height: 22px !important;
   width: 22px !important;
   min-width: unset;
@@ -73,9 +79,6 @@
 }
 .camera .video .opts .opt:not(:last-child) {
   margin-right: 6px;
-}
-.camera .video .opts .opt:hover {
-  opacity: 1;
 }
 .camera .video .opts .opt.bg {
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
