--- a/public/crx/vera/style/widget.less
+++ b/public/crx/vera/style/widget.less
@@ -7,7 +7,7 @@
   bottom: 30px;
   width: 60px;
   height: 50px;
-  background-color: #5c46e3;
+  background-color: var(--panel-bg-color);
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   padding: 5px 5px 5px 0;
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
   &.show {
-    display: flex;
+    display: flex !important;
   }
   &:hover {
     transform: translateX(-5px);
