--- a/public/crx/vera/style.less
+++ b/public/crx/vera/style.less
@@ -1,5 +1,7 @@
 // reset
 @import (inline) './style/reset.css';
+// theme
+@import './style/theme.less';
 // widget
 @import './style/widget.less';
 // panel
