--- a/public/crx/vera/style/invite.css
+++ b/public/crx/vera/style/invite.css
@@ -1,35 +1,42 @@
 .invite {
+  box-sizing: border-box;
+  height: 200px;
   width: 200px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
   padding: 5px;
-}
-.invite .btn {
-  white-space: nowrap;
-  margin-bottom: 10px;
-  border: 1px solid #fff;
-  background-color: #5c46e3;
-  color: #fff;
-  border-radius: 4px;
-  padding: 4px 10px;
-  font-size: 22px;
-  cursor: pointer;
+  background-color: var(--camera-bg-color);
+  border-radius: var(--border-radius);
 }
 .invite .link {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 4px;
-  border: 1px solid #eee;
-  background: rgba(2, 2, 2, 0.4);
-  color: #fff;
+  background: var(--button-bg-color);
+  border-radius: var(--border-radius);
   font-size: 10px;
+}
+.invite .link .url {
+  color: var(--font-color);
   width: 100%;
   height: fit-content;
-  white-space: pre-wrap;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   word-break: break-word;
   text-align: left;
   line-height: 1.2;
   max-height: 90px;
-  overflow: scroll;
+  overflow: hidden;
+}
+.invite .link .btn {
+  border: none;
+  white-space: nowrap;
+  background-color: var(--camera-bg-color);
+  color: var(--font-color);
+  border-radius: var(--border-radius);
+  padding: 4px 10px;
+  cursor: pointer;
 }
