--- a/public/crx/vera/style/join.less
+++ b/public/crx/vera/style/join.less
@@ -1,20 +1,21 @@
 .join {
+  box-sizing: border-box;
+  height: 200px;
   width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
   padding: 5px;
+  background-color: var(--camera-bg-color);
+  border-radius: var(--border-radius);
   .btn {
+    border: none;
     white-space: nowrap;
-    margin-bottom: 10px;
-    border: 1px solid #fff;
-    background-color: #5c46e3;
-    color: #fff;
-    border-radius: 4px;
+    background-color: var(--button-bg-color);
+    color: var(--font-color);
+    border-radius: var(--border-radius);
     padding: 4px 10px;
-    font-size: 22px;
     cursor: pointer;
   }
 }
