--- a/public/crx/vera/style/widget.css
+++ b/public/crx/vera/style/widget.css
@@ -6,7 +6,7 @@
   bottom: 30px;
   width: 60px;
   height: 50px;
-  background-color: #5c46e3;
+  background-color: var(--panel-bg-color);
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   padding: 5px 5px 5px 0;
@@ -16,7 +16,7 @@
   justify-content: center;
 }
 #PORTAL_VERA_WIDGET.show {
-  display: flex;
+  display: flex !important;
 }
 #PORTAL_VERA_WIDGET:hover {
   transform: translateX(-5px);
