chore: update UI

--- a/public/crx/vera/style/camera.css
+++ b/public/crx/vera/style/camera.css
@@ -8,7 +8,7 @@
   justify-content: center;
   border-radius: var(--border-radius);
   border: none;
-  background: var(--camera-bg-color);
+  background: transparent;
 }
 .camera:hover .video .opts {
   visibility: visible;
