--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -9,7 +9,7 @@
   justify-content: center;
   border-radius: var(--border-radius);
   border: none;
-  background: var(--camera-bg-color);
+  background: transparent;
   // &.local {
   //   border-style: solid;
   // }
