--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -161,22 +161,6 @@ table {
 #PORTAL_VERA_WIDGET:hover {
   transform: translateX(-5px);
 }
-#PORTAL_VERA_WIDGET.join:after {
-  content: '';
-  display: block;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  border: 2px dotted #5c46e3;
-  background-color: #fff;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/invite.svg');
-  position: absolute;
-  right: -50px;
-  top: 50%;
-  animation: AniFloating 1s infinite alternate;
-}
 #PORTAL_VERA_WIDGET > .portal_logo {
   width: 40px;
   height: 40px;
@@ -211,14 +195,6 @@ table {
   background-repeat: no-repeat;
   background-position: center;
 }
-@keyframes AniFloating {
-  from {
-    transform: translateY(-50%) scale(0.6);
-  }
-  to {
-    transform: translateY(-50%) scale(1.1);
-  }
-}
 #PORTAL_VERA_PANEL {
   color: #fff;
   z-index: 999;
@@ -236,10 +212,11 @@ table {
   padding: 12px;
   border: none;
   border-radius: var(--border-radius);
-  transition: background 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  transition-property: background, width, height;
 }
 #PORTAL_VERA_PANEL[layout='min'] {
-  width: 240px;
+  width: 260px;
   min-height: 40px;
   padding-top: 0;
   background: var(--panel-bg-color);
@@ -409,7 +386,7 @@ table {
   justify-content: center;
   border-radius: var(--border-radius);
   border: none;
-  background: var(--camera-bg-color);
+  background: transparent;
 }
 #PORTAL_VERA_PANEL .cameras .camera:hover .video .opts {
   visibility: visible;
