--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -18,9 +18,10 @@
 
   border: none;
   border-radius: var(--border-radius);
-  transition: background 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  transition-property: background, width, height;
   &[layout='min'] {
-    width: 240px;
+    width: 260px;
     min-height: 40px;
     padding-top: 0;
     .cameras,
