--- a/public/crx/vera/style/invite.css
+++ b/public/crx/vera/style/invite.css
@@ -3,8 +3,10 @@
   height: 200px;
   width: 200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5px;
   padding: 5px;
   background-color: var(--camera-bg-color);
   border-radius: var(--border-radius);
@@ -37,6 +39,45 @@
   background-color: var(--camera-bg-color);
   color: var(--font-color);
   border-radius: var(--border-radius);
+  padding: 4px 10px;
+  cursor: pointer;
+}
+.invite .link .btn:active {
+  transform: scale(0.9);
+}
+.invite .users {
+  width: -webkit-fill-available;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  background-color: #1f1f1f;
+  padding: 6px 4px;
+  border-radius: var(--border-radius);
+}
+.invite .users .user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.invite .users .user:not(:last-child) {
+  padding-bottom: 4px;
+  border-bottom: 1px dashed #333;
+}
+.invite .users .user .avator {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+.invite .users .user .name {
+  font-size: 10px;
+}
+.invite .users .user .btn {
+  border: none;
+  white-space: nowrap;
+  background-color: var(--camera-bg-color);
+  color: var(--font-color);
+  border-radius: 15px;
+  font-size: 12px;
   padding: 4px 10px;
   cursor: pointer;
 }
