chore: min mode height

--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -23,7 +23,7 @@
   &[layout='min'] {
     width: 260px;
     min-height: 40px;
-    padding-top: 0;
+    padding-top: 8px !important;
     .cameras,
     .invite,
     .join {
